GCC with -ffast-math compiles ang/90. as ang*(1/90.), losing precission. This doesn't happen when the numeral is replaced with a non-const variable. So we define the variable to work around the GCC problem. Fix bug 687420.

git-svn-id: http://svn.ghostscript.com/ghostscript/trunk@5014 a1074d23-0009-0410-80fe-cf8c14f379e6